--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-html {
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+/* html {
     height: 100vh;
     width: 100vw;
-  }
+  } */
+#root{
+    width: 100%;
+}
 
 body{
     min-width: 100vw;
@@ -13,14 +21,29 @@ body{
     font-style: normal;
 }
 
+.red{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.my-form{
+    max-width: 750px;
+}
+
 .my-button{
     width: 100%;
     background-color: #8E44AD;
+    color: #fff;
 }
 
 .my-button:hover{
     width: 100%;
     background-color: #8E44AD;
+    color: #fff;
+    font-weight: 600;
+
 }
 
 .my-search{
